# Wind_Generator_Example

./: main.py  pyproject.toml
notebooks/: wind_generation.ipynb
utils/: all_imports.py
utils/testing_features/: compute_wind_generation.py  create_toy_data.py  run_simulation.py
utils/testing_features_wind_generation/: compute_wind_generation.py  run_simulation.py
