[tool.poetry]
name = "outrageousunconsciousattributes"
version = "0.1.0"
description = "Simulation for Computing Wind Energy Quantities"
authors = ["Francesco Maria Chiarlo franec94@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.10.1"
sklearn = "^0.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
